[project]
name = "merge-models"
version = "0.1.0"
description = "Merge safetensors models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "safetensors>=0.6.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]

[dependency-groups]
dev = [
    "packaging>=25.0",
]
